[gd_scene load_steps=31 format=2]

[ext_resource path="res://Bee/Idle (36x34).png" type="Texture" id=1]
[ext_resource path="res://Bee/IdleBee.gd" type="Script" id=2]
[ext_resource path="res://fsm/stateMachine.gd" type="Script" id=4]
[ext_resource path="res://Bee/Bee.gd" type="Script" id=5]
[ext_resource path="res://Bee/Hit (36x34).png" type="Texture" id=6]
[ext_resource path="res://Bee/Attack (36x34).png" type="Texture" id=7]
[ext_resource path="res://Bee/AttackBee.gd" type="Script" id=8]
[ext_resource path="res://Bee/HitBee.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 12.25 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 36, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 108, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 180, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 216, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 252, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 36, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 108, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 34 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 36, 34 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=22]
radius = 100.001

[node name="Bee" type="KinematicBody2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.25 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 5
playing = true

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Hit" type="Node2D" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Attack" type="Node2D" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
modulate = Color( 100, 0, 0, 1 )
shape = SubResource( 22 )

[node name="StingPosition" type="Position2D" parent="."]
position = Vector2( 0, 19 )

[connection signal="frame_changed" from="AnimatedSprite" to="StateMachine/Attack" method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="AttackArea" to="StateMachine/Attack" method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="StateMachine/Attack" method="_on_AttackArea_body_exited"]
